erDiagram
    CLIENT ||--o{ CUSTOMER_ORDER : realiza
    CUSTOMER_ORDER ||--|{ ORDER_DETAILS : contiene
    PRODUCT ||--|{ ORDER_DETAILS : incluye
    PRODUCT ||--o{ INVENTORY : ubicado_en

    CLIENT {
        int id_client PK
        string name
        string email
        string address
        string city
        string zip_code
        date registration_date
    }

    PRODUCT {
        int id_product PK
        string product_name
        string category
        float price
        int stock
    }

    CUSTOMER_ORDER {
        int id_order PK
        int id_client FK
        date order_date
        float total
        string state
    }

    ORDER_DETAILS {
        int id_detail PK
        int id_order FK
        int id_product FK
        int amount
        float unit_price
    }

    INVENTORY {
        int id_inventory PK
        int id_product FK
        string location
        int current_stock
        date last_update_date
    }
